# rag-practice

./: .env.example  .gitignore  FEATURE_ROADMAP.md  README.md  TODO.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
docs/: RERANKING_EXPLANATION.md
src/: __init__.py  app.py  chat_engine.py  config.py  hybrid_search.py  indexer.py  main.py  query_decomposer.py  query_engine.py  reranker.py  tracing.py
test_docs/: 星辰科技公司手册.md  测试问题清单.md
test_docs_v2/: 场景1-登录功能开发文档.md  场景1-登录故障排查指南.md  场景1-登录日志分析.md  场景1-登录页面设计规范.md  场景2-内存使用量监控配置.md  场景2-内存泄漏排查与修复.md  场景2-内存管理原理介绍.md  场景2-服务器内存升级方案.md  场景3-苹果公司产品发布日历.md  场景3-苹果公司股票分析.md  场景3-苹果派制作食谱.md  场景3-苹果的种植与养护.md  场景4-Python异常调试技巧.md  场景4-Python语法错误大全.md  场景4-Python错误日志配置.md  场景4-Python错误率统计报告.md  场景5-数据备份策略.md  场景5-数据恢复操作指南.md  场景5-数据恢复服务报价.md  场景5-防止数据丢失最佳实践.md  场景6-代码仓库迁移指南.md  场景6-员工调岗流程.md  场景6-数据库数据迁移步骤.md  场景6-服务器机房搬迁计划.md  场景7-前端页面加载优化.md  场景7-数据库查询性能优化.md  场景7-服务器性能监控方法.md  场景7-网页加载统计报告.md  混合检索效果测试问题.md
